--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,8 @@ ext {
 }
 
 dependencies {
-    compile "javax.servlet:javax.servlet-api:3.1.0"
-    compile "javax.servlet:jstl:1.2"
+    providedCompile "javax.servlet:javax.servlet-api:3.1.0"
+    runtime "javax.servlet:jstl:1.2"
 	
 	compile "org.springframework:spring-core:$springVersion"
 	compile "org.springframework:spring-web:$springVersion"
