--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 
 ################### Mongodb Configuration ##########################
-mongo.datasource.host=127.0.0.1
-mongo.datasource.maxPoolSize=20
-mongo.datasource.connectTimeout=2000
+#mongo.datasource.host=127.0.0.1
+#mongo.datasource.maxPoolSize=20
+#mongo.datasource.connectTimeout=2000
 
 ################### DataSource Configuration ##########################
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/sample-db
+jdbc.url=jdbc:mysql://localhost:3306/test
 jdbc.username=root
-jdbc.password=
-init-db=false
+jdbc.password=root
+#init-db=true
 
 ################### Hibernate Configuration ##########################
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=update
