--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@
 
 ################### DataSource Configuration ##########################
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/test
-jdbc.username=root
-jdbc.password=root
+jdbc.url=jdbc:mysql://liuxueren.mysql.rds.aliyuncs.com:3306/liuxueren_test_db
+jdbc.username=liuxueren
+jdbc.password=liuxueren
 #init-db=true
 
 ################### Hibernate Configuration ##########################
