--- a/build.gradle
+++ b/build.gradle
@@ -67,4 +67,8 @@ dependencies {
 	compile "cglib:cglib:2.2.2"
 
 	compile "org.apache.tiles:tiles-api:3.0.5"
+
+	testCompile 'junit:junit:4.12'
+	testCompile 'org.springframework:spring-test:4.1.5.RELEASE'
+
 }
